Fixed but where FormDataSource's and PushDataSource's will always be None (because there is nothing to configure) and this caused an exception to be raised. Updated submit page to merge the records and ingester overviews to make it more compact and readable.

--- a/jcudc24provisioning/static/template.css
+++ b/jcudc24provisioning/static/template.css
@@ -1030,12 +1030,12 @@ div.more_info_panel {
     color: rgb(233, 79, 53);
 }
 
-.submit_ingesters table, .submit_records table {
+.submit_overview table {
     border-collapse:collapse;
     margin: 10px 0;
 }
 
-.submit_ingesters table td, .submit_ingesters table th, .submit_records table td, .submit_records table th {
+.submit_overview table td, .submit_overview table th {
     padding: 5px 15px;
     border: 1px solid rgb(253, 185, 19);
 }
